legacy/differential_testing/gcc_regression/gcc_reg_cb/results/gcc482/save_st/pr68112.c-4.8.2-0.out.txt
pr68112.c: In function ‘foo’:
pr68112.c:10:3: error: ‘for’ loop initial declarations are only allowed in C99 mode
   for (int i = 0; i < 65536; i++)
   ^
pr68112.c:10:3: note: use option -std=c99 or -std=gnu99 to compile your code
